# Custom-Robotics-Academy

./: README.md
CustomRobots/amazon_robot/amazon_robot_description/: CMakeLists.txt  package.xml
CustomRobots/amazon_robot/amazon_robot_gazebo/: CMakeLists.txt  package.xml
RoboticsAcademy/exercises/2d_visual_odometry/: MyAlgorithm.py  pose.py  read_rosbag.py  visual_odom.py
RoboticsAcademy/exercises/2d_visual_odometry/gui/: GUI.py  cameraWidget.py  form.py  logoWidget.py  plotWidget.py  resources_rc.py  threadGUI.py
RoboticsAcademy/exercises/3d_reconstruction/: MyAlgorithm.py
RoboticsAcademy/exercises/3d_reconstruction/gui/: GUI.py  form.py  threadGUI.py
RoboticsAcademy/exercises/3d_reconstruction/gui/widgets/: Camera.py  MyGeom.py  cameraWidget.py  graphicWidget.py  logoWidget.py  point3d.py  teleopWidget.py
RoboticsAcademy/exercises/3d_reconstruction/interfaces/: camera.py  camera_parameters.py  motors.py  point.py  threadPublisher.py
RoboticsAcademy/exercises/amazon_warehouse/: MyAlgorithm.py  amazonWarehouse.py
RoboticsAcademy/exercises/amazon_warehouse/gui/: GUI.py  communicator.py  logoWidget.py  mapWidget.py  teleopWidget.py  threadGUI.py  ui_gui.py
RoboticsAcademy/exercises/amazon_warehouse/sensors/: grid.py  sensor.py  threadMotors.py  threadSensor.py
RoboticsAcademy/exercises/autopark/: MyAlgorithm.py  referee.py
RoboticsAcademy/exercises/autopark/gui/widgets/: mapWidget.py  teleopWidget.py
RoboticsAcademy/exercises/car_junction/: MyAlgorithm.py  stop.py
RoboticsAcademy/exercises/car_junction/gui/widgets/: cameraWidget.py  mapWidget.py
RoboticsAcademy/exercises/chrono/: MyAlgorithm.py  chrono.py
RoboticsAcademy/exercises/chrono/gui/: threadGUI.py
RoboticsAcademy/exercises/chrono/gui/widgets/: cameraWidget.py  mapWidget.py
RoboticsAcademy/exercises/color_filter/: MyAlgorithm.py  color_filter.py
RoboticsAcademy/exercises/color_filter/gui/: logoWidget.py  threadGUI.py
RoboticsAcademy/exercises/drone_cat_mouse/: autonomous_mouse.py  teleoperated_mouse.py
RoboticsAcademy/exercises/drone_gymkhana/: my_solution.py
RoboticsAcademy/exercises/follow_face/: MyAlgorithm.py  follow_face.py
RoboticsAcademy/exercises/follow_face/gui/: GUI.py  communicator.py  logoWidget.py  teleopWidget.py
RoboticsAcademy/exercises/follow_line/: MyAlgorithm.py
RoboticsAcademy/exercises/follow_line/gui/: form.py  threadGUI.py
RoboticsAcademy/exercises/follow_line/web-template/: gui.py  hal.py  host.py  map.py
RoboticsAcademy/exercises/follow_line_turtlebot/: MyAlgorithm.py
RoboticsAcademy/exercises/follow_line_turtlebot/gui/: GUI.py
RoboticsAcademy/exercises/global_navigation/: MyAlgorithm.py  referee.py
RoboticsAcademy/exercises/global_navigation/gui/: communicator.py  logoWidget.py  mapWidget.py  sensorsWidget.py  teleopWidget.py  threadGUI.py
RoboticsAcademy/exercises/global_navigation/sensors/: grid.py  sensor.py
RoboticsAcademy/exercises/laser_loc/: MyAlgorithm.py
RoboticsAcademy/exercises/laser_loc/gui/: GUI.py  threadGUI.py
RoboticsAcademy/exercises/laser_loc/sensors/: threadSensors.py
RoboticsAcademy/exercises/machine_vision/: pick_and_place.py
RoboticsAcademy/exercises/mobile_manipulation/: move_base_client.py  pick_and_place.py
RoboticsAcademy/exercises/obstacle_avoidance/: MyAlgorithm.py  MyAlgorithm_f1.py  Target.py  form.py
RoboticsAcademy/exercises/obstacle_avoidance/web-template/: gui.py  hal.py  host.py  map.py
RoboticsAcademy/exercises/pick_place/: pick_and_place.py
RoboticsAcademy/exercises/position_control/: Beacon.py  my_solution.py
RoboticsAcademy/exercises/rescue_people/: my_solution.py
RoboticsAcademy/exercises/vacuum_cleaner/: MyAlgorithm.py  referee.py
RoboticsAcademy/exercises/vacuum_cleaner/gui/: threadGUI.py
RoboticsAcademy/exercises/vacuum_cleaner/web-template/: gui.py  hal.py  host.py
RoboticsAcademy/exercises/vacuum_cleaner_loc/: MyAlgorithm.py  graphicPercentaje.py  referee.py
RoboticsAcademy/exercises/vacuum_cleaner_loc/web-template/: gui.py  hal.py  host.py  map.py
RoboticsAcademy/exercises/visual_lander/: my_solution.py
RoboticsAcademy/scripts/: manager.py
drones/drone_assets/: CMakeLists.txt  package.xml
drones/drone_wrapper/: CMakeLists.txt  package.xml  setup.py
drones/drone_wrapper/src/drone_wrapper/: drone_wrapper_class.py
drones/jderobot_drones/: package.xml
drones/rqt_drone_teleop/: package.xml  setup.py
drones/rqt_drone_teleop/scripts/: rqt_cam_viewer  rqt_pos_teleop  rqt_vel_teleop
drones/rqt_drone_teleop/src/rqt_cam_viewer/: cam_viewer.py
drones/rqt_drone_teleop/src/rqt_pos_teleop/: pos_teleop.py  sensorsWidget.py
drones/rqt_drone_teleop/src/rqt_vel_teleop/: teleopWidget.py  vel_teleop.py
drones/rqt_ground_robot_teleop/: package.xml  setup.py
drones/rqt_ground_robot_teleop/scripts/: rqt_ground_robot_teleop
drones/rqt_ground_robot_teleop/src/rqt_ground_robot_teleop/: ground_robot_teleop.py  teleopWidget.py
(+16 files in other folders)
