<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>drone_wrapper</name>
	<version>1.3.4</version>
	<description>The drone_wrapper package</description>

	<maintainer email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</maintainer>
	<author email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</author>

	<license>MIT</license>

	<!-- <url type="website">To be added soon</url> -->

	<buildtool_depend>catkin</buildtool_depend>

	<buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

	<depend>cv_bridge</depend>
	<depend>geometry_msgs</depend>
	<depend>mavros_msgs</depend>
	<depend>rospy</depend>
	<depend>sensor_msgs</depend>
	<depend>tf</depend>
	<depend>gazebo_ros</depend>
	<depend>mavros</depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
