<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jderobot_drones</name>
  <version>1.3.4</version>
  <description>The jderobot_drones stack</description>

  <maintainer email="pedroariasperez96@gmail.com">Pedro Arias</maintainer>
  <author email="pedroariasperez96@gmail.com">Pedro Arias</author>

  <license>MIT</license>

  <url type="website">https://github.com/JdeRobot/drones</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>drone_wrapper</exec_depend>
  <exec_depend>rqt_drone_teleop</exec_depend>
  <exec_depend>rqt_ground_robot_teleop</exec_depend>
  <exec_depend>drone_assets</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
