<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>rqt_drone_teleop</name>
	<version>1.3.4</version>
	<description>A common drone teleop interface for all drone exercises in the JdeRobot Robotics Academy</description>

	<maintainer email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</maintainer>
	<author email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</author>
	<author>Pedro Arias</author>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

	<depend>geometry_msgs</depend>
	<depend>rospy</depend>
	<depend>rqt_gui</depend>
	<depend>rqt_gui_py</depend>
	<depend>sensor_msgs</depend>
	<depend>python-rospkg</depend>
	<depend>roslib</depend>
	<depend>drone_wrapper</depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
		<architecture_independent/>
		<rqt_gui plugin="${prefix}/plugin_vel_teleop.xml"/>
		<rqt_gui plugin="${prefix}/plugin_cam_viewer.xml"/>
		<rqt_gui plugin="${prefix}/plugin_pos_teleop.xml"/>
	</export>
</package>
