<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amazon_robot_description</name>
  <version>1.2.1</version>
  <description>
    3D models of the Amazon Warehouse Robot for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <maintainer email="shreyas6gokhale@gmail.com">Shreyas</maintainer>
  <author email="shreyas6gokhale@gmail.com">Shreyas</author>
  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
